# mcp-pokemon-server

./: README.md  pyproject.toml  requirements.txt
src/: poke_client.py  server.py
