[project]
name = "mcp-pokemon-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.11.0",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "starlette>=0.47.1",
    "typer>=0.16.0",
    "uvicorn>=0.35.0",
]
